--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
     "@jest/globals": "^29.4.1",
     "@playwright/test": "^1.28.0",
     "@rollup/plugin-node-resolve": "13.1.3",
@@ -44,6 +45,10 @@
     "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "@web/dev-server-esbuild": "^0.3.3",
+    "@web/dev-server-rollup": "^0.3.21",
+    "@web/test-runner": "^0.15.0",
+    "@web/test-runner-playwright": "^0.9.0",
     "arg": "^5.0.1",
     "body-parser": "^1.20.1",
     "chai": "~4.3.4",
@@ -59,7 +64,8 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "web-test-runner": "^0.0.36"
   },
   "scripts": {
     "clean": "rm -fr dist",
@@ -70,7 +76,7 @@
     "start": "ts-node -O '{\"module\":\"commonjs\"}' src/tests/server.ts",
     "test": "yarn test:unit && yarn test:browser",
     "test:browser": "playwright test",
-    "test:unit": "jest src/tests/unit/",
+    "test:unit": "web-test-runner",
     "test:unit:win": "SET NODE_OPTIONS=--inspect & yarn run test:unit",
     "release": "yarn build && npm publish",
     "lint": "eslint . --ext .ts"
