--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "rootDir": "src",
+    "rootDir": "/Users/afcapel/Work/hotwired/turbo/src",
     "strict": true,
     "target": "es2017",
     "noEmit": true,
